--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     content: "";
     width: 180px;
     height: 100px; 
-    background-color: red; 
+    background-color: hsl(360, 77%, 37%); 
     position: absolute; 
     top: 128px; 
     z-index: 3; 
@@ -80,7 +80,7 @@
   	background-color: white ;
   	width: 35%; 
   	height: 25%; 
-    position: relative;
+  position: relative;
   	clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%,
       79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
   	transform: translate(-5%, 29px)
